<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ComputeActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="225dp"
        android:layout_height="0dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="321dp"
        android:text="@string/type"
        app:layout_constraintBottom_toTopOf="@+id/edit_value2"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.161"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="22dp"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/sum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sum" />

        <RadioButton
            android:id="@+id/square"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/square" />
    </RadioGroup>

    <EditText
        android:id="@+id/edit_value1"
        android:layout_width="228dp"
        android:layout_height="67dp"
        android:layout_marginTop="25dp"
        android:height="50sp"
        android:ems="10"
        android:hint="@string/value1"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="39dp"
        android:text="@string/value1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/value2text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/value2"
        app:layout_constraintStart_toStartOf="@+id/edit_value1"
        app:layout_constraintTop_toBottomOf="@+id/edit_value1" />

    <EditText
        android:id="@+id/edit_value2"
        android:layout_width="243dp"
        android:layout_height="0dp"
        android:layout_marginBottom="212dp"
        android:height="50sp"
        android:ems="10"
        android:hint="@string/value2"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/value2text"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/calculateBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintStart_toStartOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="32dp"
        android:text="@string/Result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculateBtn" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="92dp"
        android:text="..."
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/calculateBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>